app/assets/stylesheets/show.css
#info-container-show{
	padding-top: 10px;
  padding-bottom: 10px;
  border-top: 1px solid #DADADA;
  border-bottom: 1px solid #DADADA;
  background-color: white;
}

.interaction-container{
	margin: 20px;
  height: 600px;
  width: auto;
}

.top-bar{
	width: 100%;
  margin: 0px;
  border-bottom: 1px solid rgb(194, 194, 194);
  padding: 5px 0px 0px 5px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.half-box{
  width: 50%;
  float:left;
}

.history-title{
	text-align: center;
  height: 49px;
  margin: 0px; 
}

.history{
	width: 100%;
  height: 535px;
  overflow: auto;
}

.history-item-selected{
  background-color: #ddd;
  border-left-width: 0px;
}

.history-item-selected:hover{
  background-color: #ddd;
  border-left-width: 0px;
}

.shadow-box{
	width: 100%;
  height: 535px;
	margin: auto;
  -webkit-box-shadow: inset 0px 0px 0px 10px #ddd;
  -mox-box-shadow: inset 0px 0px 0px 10px #ddd;  
  box-shadow: inset 0px 0px 0px 10px #ddd;
}

#interaction{
  padding: 10px;
  height: auto;
  width: auto;
  text-align: center;
  position: relative;
}
.interaction-button{
	width: 42px;
	height: 42px;
	display: inline-block;
}

.interaction-icon {
  padding: 0px!important;
  margin: 0px!important;
}
/* Calendar Tab CSS */
#calendar{
}
/* GMail Tab CSS */
#gmail, #twitter{
	margin: auto;
	text-align: left;
}
/* Displays message indicating successful post */
#alert-container{
  margin-top: 10px;
  position: absolute;
  width: 50%;
  left: 25%;
}
.history-reply{
  border: 1px solid rgb(194, 194, 194);
  border-radius: 4px;
  margin-top: 10px;
  margin-bottom: -20px;
  padding: 5px;
  text-align: center;
  vertical-align: middle;
}

.twitter-bar
{
  background-color: #00ACED !important;  
}

.gmail-bar{
  background-color: #E74E41 !important;
}

.calendar-bar{
  background-color: #3178EF !important;
}

.facebook-bar{
  background-color: #3B5B99 !important;
}

.linkedin-bar{
  background-color: #187BA6 !important;
}

.phone-bar{
  background-color: #45B548 !important;
}

.engage-header{
  text-align: center;
  bottom-border: 1px solid rgb(194, 194, 194);
}

.small-twitter-picture{
  width: 48px;
  height: 48px;
  border-radius: 4px;
  margin-right: 5px;
  float: left;
}

.tweet-area{
  margin: 5px 0px 5px 0px;
}

.twitter-full-name{
  display:inline-block;
  font-size: 17px;
  float: left;
  vertical-align: top;
}

.twitter-screen-name{
  display: inline-block;
  vertical-align: bottom;
  float: left;
  font-size: 14px;
}

.previous-tweet {
  margin: 5px 0px 10px 0px;
  padding: 7px;
  border: 1px solid rgb(194, 194, 194);
  border-radius: 4px;
  background-color: #eee;
}

.retweet-box{
  margin-bottom: 15px;
}


.outgoing-icon{
  width: 16px;
  height: 16px;
  margin: 16px;
  float:right;
  position: absolute;
  top: 0;
  right: 0;
}
#gmail a{
  color: #E74E41;
}

#gmail a:hover{
  color:#7f1910;
}

.previous-email {
  margin: 5px 0px 10px 0px;
  padding: 7px;
  border: 1px solid rgb(194, 194, 194);
  border-radius: 4px;
}



.add-on{
  width: 14.8% !important;
  text-align: center;
}
.twitter-new-contact-submit{
  position: relative;
  margin-left: 5px;
  top: -5px;
  width: 60px;
}
.twitter-signin{
  position: relative;
  top: 200px;
  margin: 0 auto;
  width: 300px;
  text-align: center;
}
.twitter-signin-background{
  background-image: url(../assets/twitter-background.png);
  background-repeat: no-repeat;
  background-color: #C0DEED;
  height: 505px;
  position: relative;
  top: -10px;
}
.twitter-signin-button{
  height: 55px;
  width: 283px;
  display: block;
  background-image: url(../assets/twitter-signin.png);
}
.twitter-signin-button:hover{
  background-position: 0px -80px;
  cursor: pointer;
}
.twitter-signin-button:active{
  background-position: 0px -160px;
}

